Testing spring8 Error